--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.css linguist-detectable=false
 *.python linguist-detectable=true 
+*.js linguist-detectable=false
+*.html linguist-detectable=false  
